# glyph

./: .gitignore  Cargo.toml  GLYPH_BLUEPRINT.md  LICENSE  README.md
crates/glyph-app/: Cargo.toml
crates/glyph-app/src/: config_app.rs  main.rs
crates/glyph-core/: Cargo.toml  buffer.rs  cursor.rs  document.rs  history.rs
crates/glyph-core/src/: buffer.rs  cursor.rs  document.rs  history.rs  lib.rs  resaltado.rs
crates/glyph-lsp/: Cargo.toml
crates/glyph-lsp/src/: cliente.rs  lib.rs  transporte.rs
crates/glyph-plugin-api/: Cargo.toml
crates/glyph-plugin-api/src/: lib.rs
crates/glyph-plugin-api/wit/: plugin.wit
crates/glyph-plugin-host/: Cargo.toml
crates/glyph-plugin-host/src/: lib.rs  lua.rs  wasm.rs
crates/glyph-renderer/: Cargo.toml
crates/glyph-renderer/src/: configuracion.rs  contenido.rs  eventos.rs  gpu.rs  lib.rs  quads.rs  renderer.rs  seccion.rs  texto.rs
crates/glyph-webview/: Cargo.toml
crates/glyph-webview/src/: lib.rs
plugins/plugin-formatter/: Cargo.toml
plugins/plugin-formatter/src/: lib.rs
plugins/plugin-git/: Cargo.toml
plugins/plugin-git/src/: lib.rs
plugins/plugin-markdown/: Cargo.toml  init.lua
plugins/plugin-markdown/src/: lib.rs
plugins/plugin-sidebar/: Cargo.toml  init.lua
plugins/plugin-sidebar/src/: lib.rs
plugins/plugin-theme/: Cargo.toml  init.lua
plugins/plugin-theme/src/: lib.rs
plugins/plugin-wasm-monokai/: Cargo.toml
plugins/plugin-wasm-monokai/src/: lib.rs
