[package]
name        = "glyph-app"
version.workspace     = true
edition.workspace     = true
authors.workspace     = true
license.workspace     = true
repository.workspace  = true
rust-version.workspace = true
description = "Binario principal del editor Glyph"

[[bin]]
name = "glyph"
path = "src/main.rs"

[dependencies]
glyph-core     = { path = "../glyph-core" }
glyph-renderer = { path = "../glyph-renderer" }
glyph-lsp          = { path = "../glyph-lsp" }
glyph-plugin-host  = { path = "../glyph-plugin-host" }
glyph-plugin-api   = { path = "../glyph-plugin-api" }
glyph-webview      = { path = "../glyph-webview" }
plugin-theme       = { path = "../../plugins/plugin-theme" }
plugin-sidebar     = { path = "../../plugins/plugin-sidebar" }
plugin-markdown    = { path = "../../plugins/plugin-markdown" }
anyhow              = { workspace = true }
arboard             = { workspace = true }
tokio               = { workspace = true }
tracing             = { workspace = true }
tracing-subscriber  = { workspace = true }
serde               = { workspace = true }
toml                = { workspace = true }
dirs                = { workspace = true }
