[package]
name        = "glyph-core"
version.workspace     = true
edition.workspace     = true
authors.workspace     = true
license.workspace     = true
repository.workspace  = true
rust-version.workspace = true
description = "Núcleo del editor: buffer de texto, cursores, historial y resaltado sintáctico"

[dependencies]
anyhow               = { workspace = true }
ropey                = { workspace = true }
serde                = { workspace = true }
uuid                 = { workspace = true }
tracing              = { workspace = true }
tree-sitter          = { workspace = true }
tree-sitter-highlight = { workspace = true }
tree-sitter-rust       = { workspace = true }
tree-sitter-javascript = { workspace = true }
tree-sitter-python     = { workspace = true }
tree-sitter-json       = { workspace = true }
tree-sitter-yaml       = { workspace = true }
tree-sitter-bash       = { workspace = true }
tree-sitter-typescript = { workspace = true }
tree-sitter-html       = { workspace = true }
tree-sitter-css        = { workspace = true }
tree-sitter-c-sharp    = { workspace = true }
tree-sitter-java       = { workspace = true }
