[package]
name        = "glyph-lsp"
version.workspace     = true
edition.workspace     = true
authors.workspace     = true
license.workspace     = true
repository.workspace  = true
rust-version.workspace = true
description = "Cliente LSP asíncrono para el editor Glyph"

[dependencies]
tokio        = { workspace = true }
lsp-types    = { workspace = true }
serde_json   = { workspace = true }
serde        = { workspace = true }
anyhow       = { workspace = true }
tracing      = { workspace = true }
