[package]
name        = "glyph-plugin-api"
version.workspace     = true
edition.workspace     = true
authors.workspace     = true
license.workspace     = true
repository.workspace  = true
rust-version.workspace = true
description = "Contratos WIT y tipos públicos del SDK de plugins — pendiente Milestone 3"

# Sin dependencias hasta Milestone 3
[dependencies]
