[package]
name        = "glyph-plugin-host"
version.workspace     = true
edition.workspace     = true
authors.workspace     = true
license.workspace     = true
repository.workspace  = true
rust-version.workspace = true
description = "Runtime de plugins Lua + WASM — pendiente Milestone 3"

# Sin dependencias hasta Milestone 3
[dependencies]
