[package]
name        = "glyph-plugin-host"
version.workspace     = true
edition.workspace     = true
authors.workspace     = true
license.workspace     = true
repository.workspace  = true
rust-version.workspace = true
description = "Runtime de plugins Lua para el editor Glyph"

[dependencies]
glyph-plugin-api = { path = "../glyph-plugin-api" }
mlua             = { workspace = true }
anyhow           = { workspace = true }
tracing          = { workspace = true }
