[package]
name        = "plugin-git"
version.workspace     = true
edition.workspace     = true
authors.workspace     = true
license.workspace     = true
repository.workspace  = true
rust-version.workspace = true
description = "Plugin oficial de integración Git (WASM) — pendiente Milestone 3"

[dependencies]
