[package]
name        = "plugin-sidebar"
version.workspace     = true
edition.workspace     = true
authors.workspace     = true
license.workspace     = true
repository.workspace  = true
rust-version.workspace = true
description = "Plugin oficial de explorador de archivos (Lua) — Milestone 5"

[dependencies]
