[package]
name        = "plugin-theme"
version.workspace     = true
edition.workspace     = true
authors.workspace     = true
license.workspace     = true
repository.workspace  = true
rust-version.workspace = true
description = "Plugin oficial de temas (Lua) — pendiente Milestone 3"

[dependencies]
